--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,25 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Users
+  has_many :posts
+  has_many :places
+  has_many :attractions, through: :places
 
-Things you may want to cover:
+Places
+  has_many :attractions
+  belongs_to :user
 
-* Ruby version
+Attractions
+  belongs_to :place
+  types:
+  -restaurants
+  -bars
+  -monuments
+  -parks
+  -museums
 
-* System dependencies
+Posts
+  belongs_to :user
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Friends
+  belongs_to :user
